tests/baselines/reference/withStatement.errors.txt
withStatement.ts(3,1): error TS1101: 'with' statements are not allowed in strict mode.
withStatement.ts(3,1): error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.


==== withStatement.ts (2 errors) ====
    declare var ooo:any;
    
    with (ooo.eee.oo.ah_ah.ting.tang.walla.walla) { // error
    ~~~~
!!! error TS1101: 'with' statements are not allowed in strict mode.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
        bing = true; // no error
        bang = true; // no error
        
        function bar() {}
    
        bar();
            
    }
    